<resources>
    <string name="app_name">Login</string>
    <string name="app_connect">App Connect</string>
    <string name="text_welcome">Welcome back!</string>
    <string name="text_input_email">Email or Username\n</string>
    <string name="text_input_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="or_login">or login with</string>
    <string name="cd_login_google">Log in with Google</string>
    <string name="cd_login_facebook">Log in with Facebook</string>
    <string name="cd_login_github">Log in with GitHub</string>
    <string name="company_logo">logo</string>
    <string name="text_sign_up">Don\'t have an account? Sign Up</string>
    <string name="cd_show_password">show password\n</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="github">GitHub</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_log_in">Already have an account?Log in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
</resources>