<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:scaleType="centerCrop"
            android:contentDescription="@string/company_logo" />

    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_connect"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/cardLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tinputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:hint="@string/text_input_email"
        app:hintTextColor="@color/primary"
        android:textColorHint="@color/primary"
        app:boxCornerRadiusTopStart="12sp"
        app:boxCornerRadiusTopEnd="12sp"
        app:boxCornerRadiusBottomStart="12sp"
        app:boxCornerRadiusBottomEnd="12sp"
        app:boxStrokeColor="@color/primary"
        app:startIconDrawable="@drawable/username_24"
        app:startIconTint="@color/primary"


        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            >
        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tinputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:hint="@string/text_input_password"
        app:hintTextColor="@color/primary"
        android:textColorHint="@color/primary"
        app:boxCornerRadiusTopStart="12sp"
        app:boxCornerRadiusTopEnd="12sp"
        app:boxCornerRadiusBottomStart="12sp"
        app:boxCornerRadiusBottomEnd="12sp"
        app:boxStrokeColor="@color/primary"
        app:startIconDrawable="@drawable/password_24"
        app:startIconTint="@color/primary"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/password_eye_selector"
        app:endIconTint="@color/primary"



        app:layout_constraintTop_toBottomOf="@+id/tinputEmail"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            >
        </com.google.android.material.textfield.TextInputEditText>


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_marginTop="20sp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:backgroundTint="@color/primary"

        app:layout_constraintTop_toBottomOf="@+id/tinputPassword"
        >
    </Button>


    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="16sp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/tvOrLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_login"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="24sp"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/btnSocialLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvOrLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btnGoogle"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="12dp"
            android:padding="12dp"
            android:background="@drawable/btn_round"
            android:src="@drawable/google"
            android:contentDescription="@string/google" />

        <ImageView
            android:id="@+id/btnFacebook"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="12dp"
            android:padding="12dp"
            android:background="@drawable/btn_round"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook" />

        <ImageView
            android:id="@+id/btnGithub"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginHorizontal="12dp"
            android:padding="12dp"
            android:background="@drawable/btn_round"
            android:src="@drawable/github"
            android:contentDescription="@string/github" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSignUpPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="14sp"
        android:text="Don't have account?Sign Up"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnSocialLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />








</androidx.constraintlayout.widget.ConstraintLayout>